[package]
name = "weather_exporter"
version = "0.1.0"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.3"
config = "0.10.1"
once_cell = "1.4.0"
clap = "2.33.1"
