[package]
name = "weather_exporter"
version = "0.1.0"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.3"
clap = "2.33.1"
cascara = "0.1.0"
string-error = "0.1.0"
num_cpus = "1.0"
